# ex_h3o

./: .codecov.yml  .credo.exs  .gitignore  LICENSE  README.md  checksum-Elixir.ExH3o.Native.exs  checksum.exs  mix.exs
.github/workflows/: ci.yml  claude.yml  release.yml
bench/: collections.exs  gc_deep_dive.exs  polyfill.exs  single_cell.exs  stress.exs
config/: config.exs  test.exs
docs/: benchee-patterns.md  msacc-stress-testing.md  nif-conventions.md  rustler-reference.md
lib/: ex_h3o.ex
lib/ex_h3o/: native.ex
lib/ex_h3o/stress/: config.ex  harness.ex  runner.ex
native/ex_h3o_nif/: Cargo.toml  Makefile
native/ex_h3o_nif/c_src/: ex_h3o_nif.c
native/ex_h3o_nif/src/: atoms.rs  lib.rs  types.rs
test/: ex_h3o_precompiled_test.exs  ex_h3o_property_test.exs  ex_h3o_shutdown_test.exs  ex_h3o_test.exs  test_helper.exs
test/support/: generators.ex
